# freediag

./: .clang-format  .dockerignore  .gdbinit  .gitignore  AUTHORS  CHANGES  CMakeLists.txt  CODING_STANDARDS  ChangeLog  Dockerfile  FreeDiag.sln  FreeDiag.vcproj  Makefile  Makefile.am  Makefile.in  OLD_CHANGES  README  README.md  aclocal.m4  build_simple.bat  build_simple.sh  cconf.h.in  config.h.in  configure  configure.ac  cppcheck_proj.cppcheck  install  reconf  uncrustify.cfg
cmake/: Windows-Embarcadero.cmake  toolchain-i686-w64-mingw32.cmake
cppcheck/: linux.cppcheck  run-cppcheck.bat  win32.cppcheck
doc/: OBD_knowledge.html  OBD_plug_pins_and_protocols.txt  SRV0x00,PID0x1C-OBD-flavors.txt  Scantool-Manual.htm  Scantool-Manual.html  Supported-Interfaces.htm  Supported-Interfaces.html  build_system.txt  donate.html  dumb_interfaces.txt  index.htm  index.html  moreAboutSupport.html  osi_model.html  practical_status.txt  sourcetree_notes.txt  style.css  title.xcf
doc_interfaces/: MET16_Error Response Messages.htm  MET16_Request Messages.htm  MET16_Response Messages.htm  README
include/: freediag_aif.h
scangui/: AUTHORS  CHANGES  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  install  reconf  scangui.fl  scanguiCallbacks.cxx  scanguiInit.cxx
scantool/: .depend  AUTHORS  CMakeLists.txt  INSTALLING  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  configure.ac  diag.h  diag_cfg.c  diag_cfg.h  diag_config.c.in  diag_dtc.c  diag_dtc.h  diag_err.h  diag_general.c  diag_iso14230.h  diag_l0.c  diag_l0.h  diag_l0_br.c  diag_l0_dumb.c  diag_l0_dumbtest.c  diag_l0_elm.c  diag_l0_me.c  diag_l0_se.c  diag_l0_sim.c  diag_l0_vw.c  diag_l1.c  diag_l1.h  diag_l2.c  diag_l2.h  diag_l2_can.c  diag_l2_can.h  diag_l2_d2.c  diag_l2_d2.h  diag_l2_iso14230.c  diag_l2_iso14230.h  (+83 more)
scantool/scantool_850/: basic.h  config.h  dtc.c  dtc.h  ecu.c  ecu.h  frobbed.c  frobbed.h  makedtc.sh  parser.py  xiaotec.c  xiaotec.h
scantool/scantool_850/templates/: dtc.mustache  dtc_list.mustache  ecu.mustache  ecu_entry.mustache  ecu_item.mustache  ecu_list.mustache  prefix.mustache  suffix.mustache
schedSetter/: CMakeLists.txt
schedSetter/unix/: debugging.c  debugging.h  schedSetter.c  schedSetterWrapper.sh
tests/: 850.ini  CMakeLists.txt  README  cli_1.ini  cli_1.stdo_p  conf_l0_dumb.ini  l0_carsim_1.ini  l0_carsim_1.stde_p  l0_carsim_1.stdo_p  l0_carsim_2.db  l0_carsim_2.ini  l0_carsim_2.stdo_p  l0_carsim_3.db  l0_carsim_3.ini  l0_carsim_3.stdo_p  l0_carsim_4.db  l0_carsim_4.ini  l0_carsim_5.db  l0_carsim_5.ini  l0_carsim_5.stde_p  l0_carsim_6.db  l0_carsim_6.ini  l0_carsim_6.stde_p  l0_dumb_halfdup.ini  l0_dumb_halfdup.stde_f  l0_dumb_halfdup.stdo_p  l0_dumb_halfdup_2.ini  l0_dumb_halfdup_2.stde_f  l0_dumb_halfdup_2.stdo_p  l2_14230_fast.db  l2_14230_fast.ini  l2_14230_fast.stde_p  l2_14230_fast.stdo_p  l2_14230_negresp.db  l2_14230_negresp.ini  l2_14230_negresp.stde_f  l2_14230_negresp.stde_p  l2_9141_reconst.db  l2_9141_reconst.ini  l2_9141_reconst.stde_p  (+34 more)
